# python-project-83

./: .coverage  .gitignore  Makefile  README.md  database.sql  my_pytest.ini  pyproject.toml  setup.cfg
.github/workflows/: check.yml  checking-correctness.yml
page_analyzer/: __init__.py  app.py  application.py  db.py  site_processing.py  url_processing.py  urls.py  urlutils.py  webutils.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  internal_server_error.html  messages.html  page_not_found.html  url.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/url_db/: __init__.py  db_operations.py  url_db_operations.py
page_analyzer/url_db_handler/: __init__.py  db_operations.py  url_db_operations.py
tests/: my_test_application.py  my_test_db.py  my_test_site_processing.py  my_test_url_processing.py  my_test_urlutils.py  my_test_webutils.py  test_app.py  test_application.py  test_db.py
tests/fixtures/: base.html  empty_list_urls.html  index.html  list_urls.html  sample.html  url_page.html  urls.html
tests/fixtures/errors/: 404.html  500.html
tests/fixtures/flashes/: flash_bad_url.html  flash_empty_url.html  flash_too_long_url.html
tests/my_test_application/: conftest.py
tests/my_test_urls/: conftest.py  my_test_urls.py
tests/test_application/: test_application.py
tests/test_urls/: conftest.py  test_urls.py
tests/url_db/: my_test_db_operations.py  my_test_url_db_operations.py
tests/url_db_handler/: my_test_db_operations.py  my_test_url_db_operations.py
